# clairvision-fable

./: .dockerignore  .env.example  .gitignore  Caddyfile  FUTURE_TASKS.md  LESSONS.md  README.md  alembic.ini  clairvisionProject.txt  clairvision_c.txt  clairvision_cookies.txt  docker-compose.yml  production.yml
.claude/: launch.json
.github/workflows/: deploy-pipeline-image.yml  deploy.yml  pipeline-vm-safety-net.yml
api/: Dockerfile  pyproject.toml
api/clairvision_api/: auth_deps.py  celery_client.py  cli.py  deps.py  main.py
api/clairvision_api/routers/: auth.py  cluster.py  events.py  gallery.py  images.py  organizers.py  public.py  search.py
api/clairvision_api/services/: email_service.py  faiss_manager.py  image_cache_service.py  pipeline_vm_service.py  search_service.py  umap_service.py
frontend/: .dockerignore  .env.local.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/accept-invite/: page.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/dashboard/: ClientLayout.tsx  layout.tsx  page.tsx
frontend/app/e/[slug]/: layout.tsx  (+1 more)
frontend/app/events/: page.tsx
frontend/components/: DuplicateDrawer.tsx  GalleryGrid.tsx  GallerySkeleton.tsx  ImageCard.tsx  IngestForm.tsx  Lightbox.tsx  ResultsGrid.tsx  SelfieUploadZone.tsx  StatusLine.tsx  TopNav.tsx
frontend/components/auth/: TokenPasswordForm.tsx  authStyles.ts
frontend/components/cluster/: ClusterCanvas.tsx  ClusterView.tsx  ZoomResetButton.tsx
frontend/components/dashboard/: DashboardNav.tsx  PreviewGrid.tsx
frontend/components/public/: EventLayoutClient.tsx  HomePageClient.tsx  PublicEventContext.tsx  PublicEventNav.tsx
frontend/lib/: api-client.ts  mock.ts  types.ts
infra/aws/: provision-ec2.sh  provision-faiss-bucket.sh  provision-iam.sh  provision-pipeline-sg.sh
infra/postgres/: init.sql
infra/postgres/migrations/: env.py
lessons/: async-cleanup-cant-depend-on-ephemeral-worker.md  bake-ml-weights-needs-oversized-root-volume.md  blur-threshold-vs-soft-focus.md  celery-on-windows-dev.md  celery-prefork-multiplies-model-memory.md  clip-quickgelu-variant.md  compose-env-file-optional.md  dev-workflow-conventions.md  docker-prune-needs-a-flag-for-unique-tags.md  elastic-ip-needed-for-externally-managed-dns.md  exif-orientation-must-be-applied.md  facenet-pytorch-needs-no-deps.md  frontend-contract-assumptions.md  frontend-redesign-can-orphan-backend-features.md  gitignored-weights-need-ci-build-time-fetch.md  imds-hop-limit-blocks-containerized-aws-calls.md  jit-heavy-imports-need-boot-warmup.md  laplacian-needs-resolution-normalization.md  mtcnn-needs-post-detection-confidence-gate.md  next-build-clobbers-dev-server.md  next-public-env-is-baked-at-build.md  passlib-bcrypt-incompatible.md  per-image-isolation-proved-in-failure.md  schema-dims-are-a-guardrail.md  security-tests-need-prod-posture.md  smoke-test-fetch-paths-end-to-end.md  thumbnail-decode-needs-draft-mode-not-full-decode.md  ubuntu-jammy-python311-is-rc1.md  validate-test-assets-before-pipeline-runs.md  verify-container-code-after-rebuild.md  worker-death-mid-chord-wedges-event.md
pipeline/: Dockerfile  Dockerfile.cpu  pyproject.toml  standalone-entrypoint.sh
pipeline/clairvision_pipeline/: celery_app.py  errors.py  idle_watchdog.py
pipeline/clairvision_pipeline/faiss_index/: builder.py
pipeline/clairvision_pipeline/io/: manifest.py
pipeline/clairvision_pipeline/models/: clip_model.py  model_registry.py  mtcnn_model.py  nima_model.py
pipeline/clairvision_pipeline/stages/: stage1_quality.py  stage2_duplicates.py  stage3_faces.py
pipeline/clairvision_pipeline/tasks/: db_helpers.py  maintenance_tasks.py  orchestration.py  stage1_tasks.py  stage2_tasks.py  stage3_tasks.py
pipeline/weights/: README.md
shared/: pyproject.toml
shared/clairvision_shared/: config.py  constants.py  faiss_paths.py  faiss_s3.py  slugs.py
shared/clairvision_shared/auth/: passwords.py  tokens.py
shared/clairvision_shared/db/: enums.py  models.py  session.py
shared/clairvision_shared/io/: image_utils.py  source_fetcher.py
shared/clairvision_shared/ml/: arcface.py  mtcnn.py
shared/clairvision_shared/schemas/: __init__.py  cluster.py  event.py  face.py  image.py  organizer.py
(+11 files in other folders)
