[project]
name = "clairvision-api"
version = "0.1.0"
description = "ClairVision CPU-only web API: gallery, face search, image serving"
requires-python = ">=3.11"
dependencies = [
    "clairvision-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "celery[redis]>=5.3",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "onnxruntime>=1.17",
    "torch>=2.2",
    "opencv-python-headless>=4.9",
    "requests>=2.31",
    "umap-learn>=0.5",
]
# facenet-pytorch is deliberately NOT listed (torch<2.3 pin) — install
# with --no-deps; see lessons/facenet-pytorch-needs-no-deps.md.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clairvision_api*"]
