[project]
name = "clairvision-pipeline"
version = "0.1.0"
description = "ClairVision GPU pipeline worker: 3-stage ML curation via Celery"
requires-python = ">=3.11"
dependencies = [
    "clairvision-shared",
    "celery[redis]>=5.3",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "torch>=2.2",
    "torchvision>=0.17",
    "open_clip_torch>=2.24",
    "insightface>=0.7",
    "onnxruntime>=1.17",
    "faiss-cpu>=1.8",
    "requests>=2.31",
]
# facenet-pytorch is deliberately NOT listed: it pins torch<2.3 and would
# conflict at resolve time. Install it separately with --no-deps (its real
# runtime needs are already covered above) — see lessons/facenet-pytorch-
# needs-no-deps.md. GPU container may swap onnxruntime -> onnxruntime-gpu
# and faiss-cpu -> faiss-gpu; the code paths are identical.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clairvision_pipeline*"]
