[project]
name = "clairvision-shared"
version = "0.1.0"
description = "Shared DB models, schemas, config, and IO helpers for ClairVision services"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
    "httpx>=0.27",
    "Pillow>=10.3",
    "bcrypt>=4.1",
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clairvision_shared*"]
